FO: Fix the thumbs list on mobile view

--- a/themes/default-bootstrap/sass/product.scss
+++ b/themes/default-bootstrap/sass/product.scss
@@ -219,7 +219,6 @@ span.view_scroll_spacer {
 }
 #view_scroll_left,
 #view_scroll_right {
-	margin-top: 38px;
 	height: 20px;
 	width: 20px;
 	line-height: 0;
@@ -1065,7 +1064,7 @@ Quick View Styles
 						padding-left: 10px;
 					}
 					#thumbs_list {
-						width: 392px;
+						width: 100%;
 					}
 				}
 				&.pb-center-column {
